gobmkida/g3/initialize_dragon_data
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/initialize_dragon_data/src/engine/dragon.c:1183:44: error: use of undeclared identifier 'xmmword_4AFA80'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_4AFA80); 
                                           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/initialize_dragon_data/src/engine/dragon.c:1184:41: error: use of undeclared identifier 'xmmword_4AFA90'
v5 = _mm_load_si128( ( const __m128i *)&xmmword_4AFA90); 
                                        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/initialize_dragon_data/src/engine/dragon.c:1185:41: error: use of undeclared identifier 'xmmword_4AFAA0'
v6 = _mm_load_si128( ( const __m128i *)&xmmword_4AFAA0); 
                                        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/initialize_dragon_data/src/engine/dragon.c:1208:41: error: use of undeclared identifier 'xmmword_4AFAA0'
v6 = _mm_load_si128( ( const __m128i *)&xmmword_4AFAA0); 
                                        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/initialize_dragon_data/src/engine/dragon.c:1209:41: error: use of undeclared identifier 'xmmword_4AFA90'
v5 = _mm_load_si128( ( const __m128i *)&xmmword_4AFA90); 
                                        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/initialize_dragon_data/src/engine/dragon.c:1210:44: error: use of undeclared identifier 'xmmword_4AFA80'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_4AFA80); 
                                           ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/initialize_dragon_data/src/obj/1/dragon.o] Error 1
